--- a/BattleTanks/Config/DefaultEngine.ini
+++ b/BattleTanks/Config/DefaultEngine.ini
@@ -12,4 +12,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/BattleGround.BattleGround
 GameDefaultMap=/Game/BattleGround.BattleGround
+GlobalDefaultGameMode=/Game/BattleTanksGameMode_BP.BattleTanksGameMode_BP_C
 
