Maybe this will work?

--- a/BattleTanks/Config/DefaultGame.ini
+++ b/BattleTanks/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=959BDFEB46EA54D4DD75759FA33E3445
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+IncludeDebugFiles=True
+
