--- a/BattleTanks/Config/DefaultEngine.ini
+++ b/BattleTanks/Config/DefaultEngine.ini
@@ -10,7 +10,17 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/BattleGround.BattleGround
+EditorStartupMap=/Game/_Levels/BattleGround.BattleGround
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
-GlobalDefaultGameMode=/Game/BattleTanksGameMode_BP.BattleTanksGameMode_BP_C
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Script/BattleTanks.BattleTanksGameModeBase
+GlobalDefaultServerGameMode=None
 
